<resources>
    <string name="app_name">ECOLIM S.A.C</string>
    <string name="menu_inicio">Inicio</string>

    <string name="menu_gestion_empleados">🧑🏻‍🤝‍🧑🏻 Gestion Empleados</string>

    <string name="menu_gestion_usuarios">🔑 Control de Usuarios</string>

    <string name="menu_registro_residuos">📚 Registro Residuos</string>
    <string name="menu_registro_residuos_agregar">🔖 Agregado</string>
    <string name="menu_registro_residuos_monitoreo">📈 Monitoreo</string>
    <string name="menu_registro_residuos_reportes">📊 Reportes</string>

    <string name="menu_conoceme">📌 Conócenos</string>

    <string name="menu_proyectos">📖 Google Maps</string>

    <string name="menu_configuracion">⚙️ Configuración</string>
    <string name="menu_dark_mode">🌙 Modo oscuro</string>
    <string name="menu_otro_ajuste">⚙️ Otro ajuste</string>
    <string name="menu_salir">🚪 Cerrar Sesión</string>
</resources>