<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".toolbar">

    <item
        android:id="@+id/action_inicio"
        android:icon="@drawable/toolbar_inicio"
        android:title="@string/menu_inicio"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_gestion_empleados"
        android:title="@string/menu_gestion_empleados"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gestion_usuarios"
        android:title="@string/menu_gestion_usuarios"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_registro_residuos"
        android:title="@string/menu_registro_residuos"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_agregar"
                android:title="@string/menu_registro_residuos_agregar"/>
            <item
                android:id="@+id/action_listar"
                android:title="@string/menu_registro_residuos_monitoreo"/>
            <item
                android:id="@+id/action_reportes"
                android:title="@string/menu_registro_residuos_reportes"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_proyectos"
        android:title="@string/menu_proyectos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_conoceme"
        android:title="@string/menu_conoceme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_configuracion"
        android:title="@string/menu_configuracion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_salir"
        android:title="@string/menu_salir"
        app:showAsAction="never" />
</menu>
